workshop04/mini-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mini-hsvc
  namespace: minins
  labels:
    app: minio
    name: mini-hsvc
spec:
  clusterIP: None
  selector:
    app: minio
    name: mini-po
  ports:
    - port: 9000
      targetPort: 9000
      name: data
    - port: 9090
      targetPort: 9090
      name: console
---
apiVersion: v1
kind: Service
metadata:
  name: mini-svc
  namespace: minins
  labels:
    app: minio
    name: mini-svc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: mini-po
  ports:
  - name: data 
    port: 9000
    targetPort: 9000
  - name: console
    port: 9090
    targetPort: 9090
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mini-sts
  namespace: minins
  labels:
    app: minio
    name: mini-sts
spec:
  serviceName: mini-hsvc
  replicas: 3
  selector:
    matchLabels:
      app: minio
      name: mini-po
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: mini-po
    spec:
      containers:
      - name: mini-con
        image: bitnami/minio:latest
        imagePullPolicy: IfNotPresent
        command:
        - minio
        - server
        - --address=:9000
        - --console-address=:9090
        - http://mini-sts-{0...2}.mini-hsvc.minins.svc.cluster.local/data
        ports:
        - name: data
          containerPort: 9000
        - name: console
          containerPort: 9090
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          periodSeconds: 60
        volumeMounts:
        - name: mini-pvc
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: mini-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
