workshop04/mini-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minins
spec:
  ingressClassName: nginx
  rules:
  - host: console-104.248.98.60.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mini-svc
            port:
              number: 9090
  - host: data-104.248.98.60.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mini-svc
            port:
              number: 9000
